force-app/main/default/objects/Provider__c/Provider__c.object-meta.xml
<CustomObject>
    <description>Used to store information about individual Providers within a Practice.  The Provider information is used for Healthgrades Premium members.</description>
    <label>Provider</label>
    <nameField>
        <label>Provider Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Providers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>