force-app/main/default/objects/Provider__c/fields/Accepting_New_Patients__c.field-meta.xml
<CustomField>
    <fullName>Accepting_New_Patients__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accepting New Patients</label>
    <type>Checkbox</type>
</CustomField>