force-app/main/default/objects/Provider__c/fields/Addiction_Psychology_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Addiction_Psychology_Conditions__c</fullName>
    <label>Addiction Psychology Conditions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Addiction</fullName>
            </value>
            <value>
                <fullName>Alcoholism (Alcohol Dependence)</fullName>
            </value>
            <value>
                <fullName>Chemical Addiction</fullName>
            </value>
            <value>
                <fullName>Drug Abuse</fullName>
            </value>
            <value>
                <fullName>Drug and Alcohol Dependence</fullName>
            </value>
            <value>
                <fullName>Opioid Dependence</fullName>
            </value>
            <value>
                <fullName>Post-Tramatic Stress Disorder (PTSD)</fullName>
            </value>
            <value>
                <fullName>Substance Abuse</fullName>
            </value>
            <value>
                <fullName>Substance Dependence</fullName>
            </value>
            <value>
                <fullName>Tobacco Use Disorder</fullName>
            </value>
            <value>
                <fullName>Amphetamine Dependence</fullName>
            </value>
            <value>
                <fullName>Anxiolytic Dependence</fullName>
            </value>
            <value>
                <fullName>Cocaine Addiction</fullName>
            </value>
            <value>
                <fullName>Combination Drug Dependence</fullName>
            </value>
            <value>
                <fullName>Drug-Induced Mental Disorders</fullName>
            </value>
            <value>
                <fullName>Hallucinogen Dependence</fullName>
            </value>
            <value>
                <fullName>Hypnotic Dependence</fullName>
            </value>
            <value>
                <fullName>Marijuana Addiction</fullName>
            </value>
            <value>
                <fullName>Nondependent Alcohol Abuse</fullName>
            </value>
            <value>
                <fullName>Nondependent Amphetamine Abuse</fullName>
            </value>
            <value>
                <fullName>Nondependent Antidepressant Abuse</fullName>
            </value>
            <value>
                <fullName>Nondependent Anxiolytic Abuse</fullName>
            </value>
            <value>
                <fullName>Nondependent Cocaine Abuse</fullName>
            </value>
            <value>
                <fullName>Nondependent Drug and Alcohol Abuse</fullName>
            </value>
            <value>
                <fullName>Nondependent Hallucinogen Abuse</fullName>
            </value>
            <value>
                <fullName>Nondependent Hypnotic Abuse</fullName>
            </value>
            <value>
                <fullName>Nondependent Marijuana Abuse</fullName>
            </value>
            <value>
                <fullName>Nondependent Opioid Abuse</fullName>
            </value>
            <value>
                <fullName>Nondependent Sedative Abuse</fullName>
            </value>
            <value>
                <fullName>Other Psychostimulant Dependence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>