force-app/main/default/objects/Provider__c/fields/Addiction_Psychology_Procedures__c.field-meta.xml
<CustomField>
    <fullName>Addiction_Psychology_Procedures__c</fullName>
    <label>Addiction Psychology Procedures</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Addiction Treatment</fullName>
            </value>
            <value>
                <fullName>Dual Diagnosis Treatment</fullName>
            </value>
            <value>
                <fullName>Outpatient Addiction Treatment</fullName>
            </value>
            <value>
                <fullName>Relapse Prevention</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>