force-app/main/default/objects/Provider__c/fields/Allergists_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Allergists_Conditions__c</fullName>
    <label>Allergists Conditions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Allergies</fullName>
            </value>
            <value>
                <fullName>Animal Allergies</fullName>
            </value>
            <value>
                <fullName>Deviated Septum</fullName>
            </value>
            <value>
                <fullName>Earwax Buildup</fullName>
            </value>
            <value>
                <fullName>Food Allergy</fullName>
            </value>
            <value>
                <fullName>Pinkeye (Conjunctivitis)</fullName>
            </value>
            <value>
                <fullName>Pollen Allergy</fullName>
            </value>
            <value>
                <fullName>Acute Pharyngitis</fullName>
            </value>
            <value>
                <fullName>Acute Sinusitis</fullName>
            </value>
            <value>
                <fullName>Allergic Rhinitis</fullName>
            </value>
            <value>
                <fullName>Allergic Rhinitis Due to Food</fullName>
            </value>
            <value>
                <fullName>Allergic Tension Fatigue Syndrome</fullName>
            </value>
            <value>
                <fullName>Anaphylactic Egg Allergy</fullName>
            </value>
            <value>
                <fullName>Anaphylactic Fish Allergy</fullName>
            </value>
            <value>
                <fullName>Anaphylactic Food Additive Allergy</fullName>
            </value>
            <value>
                <fullName>Anaphylactic Food Allergies</fullName>
            </value>
            <value>
                <fullName>Anaphylactic Fruit and Vegetable Allergy</fullName>
            </value>
            <value>
                <fullName>Anaphylactic Milk and Dairy Allergy</fullName>
            </value>
            <value>
                <fullName>Anaphylactic Peanut Allergy</fullName>
            </value>
            <value>
                <fullName>Anaphylactic Shell Fish Allergy</fullName>
            </value>
            <value>
                <fullName>Anaphylactic Tree Nut Allergy</fullName>
            </value>
            <value>
                <fullName>Anaphylaxis</fullName>
            </value>
            <value>
                <fullName>Angioedema</fullName>
            </value>
            <value>
                <fullName>Bronchospasm</fullName>
            </value>
            <value>
                <fullName>Cholinergic Urticaria</fullName>
            </value>
            <value>
                <fullName>Chronic Pharyngitis</fullName>
            </value>
            <value>
                <fullName>Chronic Sinusitis</fullName>
            </value>
            <value>
                <fullName>Chronic Urticaria</fullName>
            </value>
            <value>
                <fullName>Combined Immunity Deficiency</fullName>
            </value>
            <value>
                <fullName>Common Variable Immune Deficiency (CVID)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>