force-app/main/default/objects/Provider__c/fields/Allergists_Procedures__c.field-meta.xml
<CustomField>
    <fullName>Allergists_Procedures__c</fullName>
    <label>Allergists Procedures</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Allergy Drops</fullName>
            </value>
            <value>
                <fullName>Allergy Shots</fullName>
            </value>
            <value>
                <fullName>Allergy Shots for Insect Stings</fullName>
            </value>
            <value>
                <fullName>Allergy Skin Testing</fullName>
            </value>
            <value>
                <fullName>Drug or Food Challenge</fullName>
            </value>
            <value>
                <fullName>Environmental Allergy Testing</fullName>
            </value>
            <value>
                <fullName>Food Sensitivity Testing</fullName>
            </value>
            <value>
                <fullName>Desensitization</fullName>
            </value>
            <value>
                <fullName>Exercise-Induced Asthma (EIA) Testing</fullName>
            </value>
            <value>
                <fullName>Lung Spirometry</fullName>
            </value>
            <value>
                <fullName>Patch Testing</fullName>
            </value>
            <value>
                <fullName>Sublingual Immunotherapy</fullName>
            </value>
            <value>
                <fullName>Xolair® Therapy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>