force-app/main/default/objects/Provider__c/fields/Bill_to_Account__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The related account that will be billed for the Provider&#39;s Healthgrades subscription.</description>
    <inlineHelpText>The related account that will be billed for the Provider&#39;s Healthgrades subscription.</inlineHelpText>
    <label>Bill to Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Providers</relationshipLabel>
    <relationshipName>Providers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>