force-app/main/default/objects/Provider__c/fields/Care_Philosophy__c.field-meta.xml
<CustomField>
    <fullName>Care_Philosophy__c</fullName>
    <label>Care Philosophy</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>