force-app/main/default/objects/Provider__c/fields/Chiropractic_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Chiropractic_Conditions__c</fullName>
    <label>Chiropractic Conditions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Back Pain</fullName>
            </value>
            <value>
                <fullName>Acute Pain</fullName>
            </value>
            <value>
                <fullName>Car Accident Injuries</fullName>
            </value>
            <value>
                <fullName>Foot Pain</fullName>
            </value>
            <value>
                <fullName>Neck Pain</fullName>
            </value>
            <value>
                <fullName>Occupational Injuries</fullName>
            </value>
            <value>
                <fullName>Stiffness</fullName>
            </value>
            <value>
                <fullName>Strains</fullName>
            </value>
            <value>
                <fullName>Whiplash Injuries</fullName>
            </value>
            <value>
                <fullName>Abdominal Muscle Strain</fullName>
            </value>
            <value>
                <fullName>Accidental Injuries</fullName>
            </value>
            <value>
                <fullName>Adhesive Capsulitis of Shoulder</fullName>
            </value>
            <value>
                <fullName>Adolescent Idiopathic Scoliosis</fullName>
            </value>
            <value>
                <fullName>Back Injuries</fullName>
            </value>
            <value>
                <fullName>Back Sprain</fullName>
            </value>
            <value>
                <fullName>Back Strain</fullName>
            </value>
            <value>
                <fullName>Cervical Spondylolisthesis</fullName>
            </value>
            <value>
                <fullName>Chronic Back Pain</fullName>
            </value>
            <value>
                <fullName>Chronic Neck Pain</fullName>
            </value>
            <value>
                <fullName>Familial Hemiplegic Migraine</fullName>
            </value>
            <value>
                <fullName>Foot Conditions</fullName>
            </value>
            <value>
                <fullName>Low Back Pain</fullName>
            </value>
            <value>
                <fullName>Lower Back Injuries</fullName>
            </value>
            <value>
                <fullName>Lower Back Muscle Strain</fullName>
            </value>
            <value>
                <fullName>Lower Back Sprain</fullName>
            </value>
            <value>
                <fullName>Myofascial Pain</fullName>
            </value>
            <value>
                <fullName>Neck Muscle Strain</fullName>
            </value>
            <value>
                <fullName>Neck Soft Tissue Trauma</fullName>
            </value>
            <value>
                <fullName>Occupational Disorders</fullName>
            </value>
            <value>
                <fullName>Pediatric Hip Disorders</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>