force-app/main/default/objects/Provider__c/fields/Chiropractic_Procedures__c.field-meta.xml
<CustomField>
    <fullName>Chiropractic_Procedures__c</fullName>
    <label>Chiropractic Procedures</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Disability Evaluation</fullName>
            </value>
            <value>
                <fullName>Low Back Procedure</fullName>
            </value>
            <value>
                <fullName>Manipulation Adjustment of Back and Neck</fullName>
            </value>
            <value>
                <fullName>Neck Pain Procedure</fullName>
            </value>
            <value>
                <fullName>Range of Motion Testing</fullName>
            </value>
            <value>
                <fullName>Rehabilitation Therapy</fullName>
            </value>
            <value>
                <fullName>Active Release Technique</fullName>
            </value>
            <value>
                <fullName>Applied Kinesiology (AK)</fullName>
            </value>
            <value>
                <fullName>Arthritic Rehabilitation</fullName>
            </value>
            <value>
                <fullName>Cervical Decompression Therapy</fullName>
            </value>
            <value>
                <fullName>Chiropractic Plus Kinesiology (CPK)</fullName>
            </value>
            <value>
                <fullName>CranioSacral Therapy (CST)</fullName>
            </value>
            <value>
                <fullName>Diagnostic Imaging</fullName>
            </value>
            <value>
                <fullName>Exercise Counseling</fullName>
            </value>
            <value>
                <fullName>Functional Orthotic</fullName>
            </value>
            <value>
                <fullName>Gait Analysis</fullName>
            </value>
            <value>
                <fullName>Graston Technique®</fullName>
            </value>
            <value>
                <fullName>Intersegmental Traction</fullName>
            </value>
            <value>
                <fullName>Kinesio® Taping</fullName>
            </value>
            <value>
                <fullName>Laser Office Procedure</fullName>
            </value>
            <value>
                <fullName>Myofascial Release Therapy</fullName>
            </value>
            <value>
                <fullName>Myotherapy</fullName>
            </value>
            <value>
                <fullName>Neurological Rehabilitation</fullName>
            </value>
            <value>
                <fullName>Non-Surgical Pain Management</fullName>
            </value>
            <value>
                <fullName>Osteopathic Manipulative Treatment (OMT)</fullName>
            </value>
            <value>
                <fullName>Post-Surgical Rehabilitaion</fullName>
            </value>
            <value>
                <fullName>Sacrospinous Ligament Fixation</fullName>
            </value>
            <value>
                <fullName>Soft Tissue Massage</fullName>
            </value>
            <value>
                <fullName>Spine and Sports Musculoskeletal Rehab</fullName>
            </value>
            <value>
                <fullName>Spine Rehabilitation Exercises</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>