force-app/main/default/objects/Provider__c/fields/Conditions__c.field-meta.xml
<CustomField>
    <fullName>Conditions__c</fullName>
    <description>List of Conditions from all the condition fields</description>
    <label>Conditions</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>