force-app/main/default/objects/Provider__c/fields/Cosmetic_Dentistry_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Cosmetic_Dentistry_Conditions__c</fullName>
    <label>Cosmetic Dentistry Conditions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gingival Diseases</fullName>
            </value>
            <value>
                <fullName>Misaligned Teeth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>