force-app/main/default/objects/Provider__c/fields/Cosmetic_Dentistry_Procedures__c.field-meta.xml
<CustomField>
    <fullName>Cosmetic_Dentistry_Procedures__c</fullName>
    <label>Cosmetic Dentistry Procedures</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dental Gum Flap Surgery</fullName>
            </value>
            <value>
                <fullName>e.max® Dental Crowns</fullName>
            </value>
            <value>
                <fullName>Endodontic Treatment</fullName>
            </value>
            <value>
                <fullName>Implant-Supported Dentures</fullName>
            </value>
            <value>
                <fullName>Laser Assisted Periodontal Therapy</fullName>
            </value>
            <value>
                <fullName>Porcelain Dental Inlays</fullName>
            </value>
            <value>
                <fullName>Porcelain Dental Onlays</fullName>
            </value>
            <value>
                <fullName>Porcelain Fixed Bridges</fullName>
            </value>
            <value>
                <fullName>Rotary Endodontics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>