force-app/main/default/objects/Provider__c/fields/Degree__c.field-meta.xml
<CustomField>
    <fullName>Degree__c</fullName>
    <label>Degree</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CDC</fullName>
            </value>
            <value>
                <fullName>DCNP</fullName>
            </value>
            <value>
                <fullName>DDM</fullName>
            </value>
            <value>
                <fullName>DDS</fullName>
            </value>
            <value>
                <fullName>LCDA</fullName>
            </value>
            <value>
                <fullName>DH</fullName>
            </value>
            <value>
                <fullName>RDA</fullName>
            </value>
            <value>
                <fullName>BDS</fullName>
            </value>
            <value>
                <fullName>CDR</fullName>
            </value>
            <value>
                <fullName>DDSc</fullName>
            </value>
            <value>
                <fullName>MDSc</fullName>
            </value>
            <value>
                <fullName>MDS</fullName>
            </value>
            <value>
                <fullName>MDentTech</fullName>
            </value>
            <value>
                <fullName>CDA</fullName>
            </value>
            <value>
                <fullName>EFDA</fullName>
            </value>
            <value>
                <fullName>DMD</fullName>
            </value>
            <value>
                <fullName>DA</fullName>
            </value>
            <value>
                <fullName>RDH</fullName>
            </value>
            <value>
                <fullName>RDHAP</fullName>
            </value>
            <value>
                <fullName>OPT</fullName>
            </value>
            <value>
                <fullName>OD</fullName>
            </value>
            <value>
                <fullName>LO</fullName>
            </value>
            <value>
                <fullName>RDO</fullName>
            </value>
            <value>
                <fullName>LDO</fullName>
            </value>
            <value>
                <fullName>DOS</fullName>
            </value>
            <value>
                <fullName>MD</fullName>
            </value>
            <value>
                <fullName>DO</fullName>
            </value>
            <value>
                <fullName>PA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>