force-app/main/default/objects/Provider__c/fields/Degree_Details__c.field-meta.xml
<CustomField>
    <fullName>Degree_Details__c</fullName>
    <description>Opens the Degree Info article in the Knowledge base</description>
    <formula>HYPERLINK(&quot;https://solutionreach.my.salesforce.com/articles/FAQ/Healthgrades-Degree-info&quot;, &quot;Degree Details&quot;,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Degree Details</label>
    <type>Text</type>
</CustomField>