force-app/main/default/objects/Provider__c/fields/Dental_Hygiene_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Dental_Hygiene_Conditions__c</fullName>
    <label>Dental Hygiene Conditions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bad Taste in Mouth</fullName>
            </value>
            <value>
                <fullName>Gum Disease</fullName>
            </value>
            <value>
                <fullName>Halitosis</fullName>
            </value>
            <value>
                <fullName>Oral Infection</fullName>
            </value>
            <value>
                <fullName>Plaque</fullName>
            </value>
            <value>
                <fullName>Plaque Buildup</fullName>
            </value>
            <value>
                <fullName>Sensitive Teeth</fullName>
            </value>
            <value>
                <fullName>Tartar Buildup</fullName>
            </value>
            <value>
                <fullName>Tooth Abscess</fullName>
            </value>
            <value>
                <fullName>Tooth Decay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>