force-app/main/default/objects/Provider__c/fields/Dental_Hygiene_Procedures__c.field-meta.xml
<CustomField>
    <fullName>Dental_Hygiene_Procedures__c</fullName>
    <label>Dental Hygiene Procedures</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dental Cleaning</fullName>
            </value>
            <value>
                <fullName>Dental Examination</fullName>
            </value>
            <value>
                <fullName>Dental Prophylaxis</fullName>
            </value>
            <value>
                <fullName>Dental Prophylaxis, Adult</fullName>
            </value>
            <value>
                <fullName>Dental Prophylaxis, Child</fullName>
            </value>
            <value>
                <fullName>Dental X-Ray</fullName>
            </value>
            <value>
                <fullName>Fluoride Varnish</fullName>
            </value>
            <value>
                <fullName>Gum Disease Treatment</fullName>
            </value>
            <value>
                <fullName>Pocket Depth Measurement</fullName>
            </value>
            <value>
                <fullName>Teeth Polishing</fullName>
            </value>
            <value>
                <fullName>Teeth Scaling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>