force-app/main/default/objects/Provider__c/fields/Dentistry_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Dentistry_Conditions__c</fullName>
    <label>Dentistry Conditions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abscess</fullName>
            </value>
            <value>
                <fullName>Alveolar Bone Loss</fullName>
            </value>
            <value>
                <fullName>Ankylosis</fullName>
            </value>
            <value>
                <fullName>Ankylosis of Tooth</fullName>
            </value>
            <value>
                <fullName>Anodontia</fullName>
            </value>
            <value>
                <fullName>Bad Taste in Mouth</fullName>
            </value>
            <value>
                <fullName>Black Hairy Tongue</fullName>
            </value>
            <value>
                <fullName>Bonding Disorders</fullName>
            </value>
            <value>
                <fullName>Bone Loss</fullName>
            </value>
            <value>
                <fullName>Burning Mouth Syndrome</fullName>
            </value>
            <value>
                <fullName>Cancer of Floor of Mouth</fullName>
            </value>
            <value>
                <fullName>Canine Teeth, Absence Upper Permanent</fullName>
            </value>
            <value>
                <fullName>Canker Sore</fullName>
            </value>
            <value>
                <fullName>Cavity</fullName>
            </value>
            <value>
                <fullName>Chipped Tooth</fullName>
            </value>
            <value>
                <fullName>Chronic Periodontitis</fullName>
            </value>
            <value>
                <fullName>Clefting - Ectropion - Conical Teeth</fullName>
            </value>
            <value>
                <fullName>Clicking of Temporomandibular Joint</fullName>
            </value>
            <value>
                <fullName>Cold Sore</fullName>
            </value>
            <value>
                <fullName>Cosmetic Conditions</fullName>
            </value>
            <value>
                <fullName>Cosmetic Peridontal Problems</fullName>
            </value>
            <value>
                <fullName>Craniofacial Disorders</fullName>
            </value>
            <value>
                <fullName>Dental Abnormalities</fullName>
            </value>
            <value>
                <fullName>Dental Disorders</fullName>
            </value>
            <value>
                <fullName>Dental Injury</fullName>
            </value>
            <value>
                <fullName>Dental Tissue Neoplasm</fullName>
            </value>
            <value>
                <fullName>Dental Trauma</fullName>
            </value>
            <value>
                <fullName>Dentin Dysplasia, Coronal</fullName>
            </value>
            <value>
                <fullName>Dentin Dysplasia, Radicular</fullName>
            </value>
            <value>
                <fullName>Dentinogenesis Imperfecta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>