force-app/main/default/objects/Provider__c/fields/Dentistry_Practicing_Specialties__c.field-meta.xml
<CustomField>
    <fullName>Dentistry_Practicing_Specialties__c</fullName>
    <label>SecondaryDentistry PracticingSpecialties</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cosmetic Dentistry</fullName>
            </value>
            <value>
                <fullName>Dentistry</fullName>
            </value>
            <value>
                <fullName>Emergency Dentistry</fullName>
            </value>
            <value>
                <fullName>Endodontics</fullName>
            </value>
            <value>
                <fullName>Laser Dentistry</fullName>
            </value>
            <value>
                <fullName>Minimally Invasive Dentistry</fullName>
            </value>
            <value>
                <fullName>Neuromuscular Dentistry</fullName>
            </value>
            <value>
                <fullName>Orofacial Pain Dentistry</fullName>
            </value>
            <value>
                <fullName>Orthodontics</fullName>
            </value>
            <value>
                <fullName>Orthodontics &amp; Dentofacial Orthopedics</fullName>
            </value>
            <value>
                <fullName>Pediatric Dentistry</fullName>
            </value>
            <value>
                <fullName>Reconstructive Dentistry</fullName>
            </value>
            <value>
                <fullName>Sedation Dentistry</fullName>
            </value>
            <value>
                <fullName>Sleep Medicine Dentistry</fullName>
            </value>
            <value>
                <fullName>Sports Dentistry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>