force-app/main/default/objects/Provider__c/fields/Dentistry_Procedures__c.field-meta.xml
<CustomField>
    <fullName>Dentistry_Procedures__c</fullName>
    <label>Dentistry Procedures</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tooth Extraction</fullName>
            </value>
            <value>
                <fullName>Root Canal</fullName>
            </value>
            <value>
                <fullName>Amalgam Dental Fillings</fullName>
            </value>
            <value>
                <fullName>Dental Crown</fullName>
            </value>
            <value>
                <fullName>Teeth Whitening</fullName>
            </value>
            <value>
                <fullName>Cosmetic Procedure</fullName>
            </value>
            <value>
                <fullName>Dental Implant</fullName>
            </value>
            <value>
                <fullName>Teeth Extraction</fullName>
            </value>
            <value>
                <fullName>Routine General Exams</fullName>
            </value>
            <value>
                <fullName>Dental Cleaning</fullName>
            </value>
            <value>
                <fullName>3rd Molar Extraction</fullName>
            </value>
            <value>
                <fullName>Abscess Incision and Drainage</fullName>
            </value>
            <value>
                <fullName>Air Abrasion</fullName>
            </value>
            <value>
                <fullName>All-on-4™ Procedure</fullName>
            </value>
            <value>
                <fullName>Arestin® Therapy</fullName>
            </value>
            <value>
                <fullName>Athletic Mouthguards</fullName>
            </value>
            <value>
                <fullName>Bite Adjustment</fullName>
            </value>
            <value>
                <fullName>Bone Regeneration Procedure</fullName>
            </value>
            <value>
                <fullName>CAD-CAM Dentistry</fullName>
            </value>
            <value>
                <fullName>Cancer Screening</fullName>
            </value>
            <value>
                <fullName>Ceramic Dental Crowns</fullName>
            </value>
            <value>
                <fullName>Cerec® Tooth Restoration Procedure</fullName>
            </value>
            <value>
                <fullName>Clear Dental Braces</fullName>
            </value>
            <value>
                <fullName>ClearCorrect™ Invisible Braces</fullName>
            </value>
            <value>
                <fullName>Cold Laser Therapy</fullName>
            </value>
            <value>
                <fullName>Complex Tooth Extraction</fullName>
            </value>
            <value>
                <fullName>Composite Fillings</fullName>
            </value>
            <value>
                <fullName>Computer Imaging for Dental Crowns</fullName>
            </value>
            <value>
                <fullName>Cosmetic Contouring  (Dental)</fullName>
            </value>
            <value>
                <fullName>Cosmetic Oral Evaluation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>